--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.2",
-    "json-server": "^1.0.0-beta.1",
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
