--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.2",
     "json-server": "^0.17.4",
