--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.2",
     "json-server": "^0.17.4",
