--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.2",
+    "formik": "^2.4.6",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,7 +24,8 @@
     "react-icons": "^5.2.1",
     "react-number-format": "^5.4.0",
     "react-router-dom": "5.1.2",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.4",
