--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "preview": "vite preview",
     "test": "vitest run",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.1",
@@ -28,11 +30,21 @@
     "react-icons": "^5.2.1",
     "react-number-format": "^5.4.0",
     "react-router-dom": "5.1.2",
+    "storybook": "8.2.7",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "1.6.1",
     "@nabla/vite-plugin-eslint": "^2.0.4",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/react": "^8.2.7",
+    "@storybook/react-vite": "^8.2.7",
+    "@storybook/test": "^8.2.7",
     "@tanstack/react-query-devtools": "^5.51.21",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
@@ -54,6 +66,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-styled-components": "^7.2.0",
